--- a/components/Layout/header.module.css
+++ b/components/Layout/header.module.css
@@ -1,21 +1,33 @@
 .headerContainer{
     display:flex;
     align-items: center;
-    border-bottom:1px solid #e4e4e4;
-    padding:1.5rem;
+    border-bottom:.5px solid #e4e4e4;
+    position:fixed;
+    width:100%;
+    z-index: 999;
+    background-color: #fff;
 }
+/* .headerContainer>nav:hover{
+    background-color: #e4e4e4;
+} */
 .headerManuList{
     font-size:20px;
     font-weight: 600;
     font-family:'Noto sans KR';
     display: flex;
 }
+
 .headerManuList>li{
-    padding:1rem 2.3rem;
+    padding:2.2rem 0;
 }
-.headerManuList>ul>li>a:hover{
+.headerManuList>li>a{
+    padding:2.3rem;
+}
+.headerManuList>li>a:hover{
     cursor: pointer;
+    border-bottom:1px solid #d21c1c ;
 }
+
 .headerBtn{
     font-size:1.2rem;
     padding:0 5rem 0 1.5rem;
@@ -46,12 +58,12 @@
     display: flex;
     align-items: center;
     padding:0 2rem;
-    /* background-color: antiquewhite; */
     position: relative;
 }
 .headerUserManuList>ul>li>a{
     padding:0 1rem;
 }
+
 .hamburgerBar>span{
     position: absolute;
     display: inline-block;
