--- a/components/Layout/sub-title.module.css
+++ b/components/Layout/sub-title.module.css
@@ -1,13 +1,15 @@
 .subTitleContainer{
     /* padding-top:7rem; */
     /* box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.3); */
+    border-top:.5px solid rgba(0,0,0,0.3);
     border-bottom:.5px solid rgba(0,0,0,0.3);
     width:100%;
     height:6rem;
     position:absolute;
     top:5.9rem;
     left:0;
-    z-index: 998;
+    z-index: 995;
+    background-color: #fff;
 }
 .subTitleTextContainer{
     width:50%;
@@ -19,4 +21,7 @@
 }
 .subTitleTextContainer>li{
     padding:0 2rem;
+}
+.subTitleTextContainer>li>a:hover{
+    color:#d21c1c;
 }
