--- a/components/Layout/header.module.css
+++ b/components/Layout/header.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     /* border-bottom:.5px solid #e4e4e4; */
     position:fixed;
-    width:100%;
+    width:1440px;
     z-index: 9999;
     background-color: rgba(255,255,255,0.9);
     padding:0 2rem;
