--- a/components/UI/section01/slide/main-slide.module.css
+++ b/components/UI/section01/slide/main-slide.module.css
@@ -14,3 +14,28 @@
     height:calc(800px - 7.5rem);
     background-size: cover;
 }
+.arrowBtn{
+    width:100%;
+    height:100vh;
+    position: relative;
+}
+.arrowBtn>span{
+    color:#fff;
+    font-size:1.3rem;
+    position:absolute;
+    bottom:34%;
+    left:3%;
+}
+.arrowBtn>button{
+    position:absolute;
+    top:40%;
+}
+.arrowBtn>button:hover{
+    cursor: pointer;
+}
+.left{
+    left:0;
+}
+.right{
+    right:0;
+}
