이벤트 슬라이드 텍스트 부분 제작

--- a/components/UI/section02/event-slides.module.css
+++ b/components/UI/section02/event-slides.module.css
@@ -1,10 +1,12 @@
 .eventSlidesContainer{
-    width:700px;
+    width:760px;
     height:500px;
     position: relative;
     border-radius: 15px;
+    box-shadow: -3px 5px 25px 3px rgba(0,0,0,0.2);
     overflow: hidden;
-
+    top:0;
+    left:43%;
 }
 .eventSlidesContainer>li{
     transition: all ease-in-out .5s;
