--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,9 @@ button{
     background-color: transparent;
     border:none;
 }
+button:hover{
+    cursor: pointer;
+}
 .none{
     display: none;
 }
