event 위로 올라가는 무한루프 제작

--- a/components/UI/section02/event-slides.module.css
+++ b/components/UI/section02/event-slides.module.css
@@ -6,9 +6,9 @@
     box-shadow: -3px 5px 25px 3px rgba(0,0,0,0.2);
     overflow: hidden;
     top:0;
-    left:43%;
+    left:42%;
 }
 .eventSlidesContainer>li{
-    transition: all ease-in-out .5s;
+    /* transition-duration: 300ms; */
     position: absolute;
 }
