--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,21 @@ button:hover{
 main{
     padding-top:5.9rem;
 }
+.m1{
+    justify-content:start;
+    padding-left:2rem;
+}
+.m2{
+    display: none;
+}
+.m3{
+    justify-content:center;
+    padding-left:2rem;
+}
+.m4{
+    justify-content:end;
+    margin-left:15rem;
+}
+.m5{
+    justify-content:end;
+}
