--- a/components/UI/section02/event-loop.module.css
+++ b/components/UI/section02/event-loop.module.css
@@ -10,7 +10,7 @@
 .loopSlides{
     height:31.5rem;
     position:absolute;
-    right:2rem;
+    right:3rem;
     top:-350px;
 }
 .loopSlides>li{
@@ -20,4 +20,39 @@
 .loopSlides>li>img{
     border-radius:15px;
     box-sizing: content-box;
+}
+.pageBtnBox{
+    float: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+}
+.pageContainer{
+    width:20px;
+    /* float:right; */
+    height:180px;
+    overflow: hidden;
+    margin:-80px auto 0;
+}
+.page{
+    width:10px;
+    height:10px;
+    border-radius:100% ;
+    background-color: #dfdfdf;
+    margin:20px auto ;
+}
+.pageActive{
+    width:10px;
+    height:10px;
+    background-color: #949292;
+}
+.pageBtn {
+    width:30px;
+    height:30px;
+    border-radius: 100%;
+    background-color: #dfdfdf;
+    text-align: center;
+    line-height: 36px;
+    margin:1rem 0;
 }
