sub page 메뉴 페이지 제작, 수정중

--- a/components/UI/manu/manu.module.css
+++ b/components/UI/manu/manu.module.css
@@ -24,7 +24,7 @@
    padding:2rem;
 }
 .manuContainer>li:hover{
-    box-shadow: 3px 3px 8px 3px rgba(0,0,0,0.3);
+    box-shadow: 1px 1px 8px 1px rgba(0,0,0,0.1);
     border-radius: 15px;
 }
 .manuContainer dl>dt{
@@ -64,6 +64,12 @@
     font-size:1.5rem;
     width:calc(100% / 5);
     text-align: center;
-    font-weight: 300;
     padding-bottom:1rem;
+}
+.nonActive{
+    font-weight: 300;
+}
+.active{
+    border-bottom:1px solid #d00505;
+    font-weight: bold;
 }
