--- a/components/Layout/header.module.css
+++ b/components/Layout/header.module.css
@@ -1,7 +1,7 @@
 .headerContainer{
     display:flex;
     align-items: center;
-    /* border-bottom:.5px solid #e4e4e4; */
+    border-bottom:.5px solid #c0c0c0;
     position:fixed;
     width:1440px;
     z-index: 9999;
@@ -76,4 +76,7 @@
 }
 .hamburgerBar>span:nth-child(2){
     bottom:20px;
+}
+.active{
+    border-bottom: 1px solid #d21c1c;
 }
