장바구니 모달 제작, 주문하기 버튼을 누르면 콘솔에 찍히게 구현

--- a/components/UI/manu/add-button.module.css
+++ b/components/UI/manu/add-button.module.css
@@ -1,8 +1,7 @@
 /* addBucket */
 .addBucket{
-    position:absolute;
-    top:45%;
     display: flex;
+    padding:0 2rem 2rem;
 }
 .addBucket>button{
     background-color: #fce2e2;
