--- a/components/UI/cart/item.module.css
+++ b/components/UI/cart/item.module.css
@@ -22,7 +22,10 @@
     justify-content: center;
     align-items: center;
 }
-.leftContainer>span{
+.btnContainer{
+    display: flex;
+}
+.btnContainer>span{
     display: inline-flex;
     font-weight: bold;
     width:30px;
@@ -31,6 +34,7 @@
     align-items: center;
 }
 .leftContainer>p{
+    /* width:150px; */
     text-align: center;
     padding:1rem;
 }
