--- a/components/UI/login/login.module.css
+++ b/components/UI/login/login.module.css
@@ -51,3 +51,13 @@
     border-radius: 15px;
     box-shadow: 0 3px 8px 3px rgba(72, 71, 71, 0.202);
 }
+.sign{
+    font-size:1rem;
+    padding:1rem 0;
+    width:80%;
+    border: 1px solid #000;
+    border-radius: 15px;
+    box-shadow: 0 3px 8px 3px rgba(72, 71, 71, 0.202);
+    margin-top:3rem;
+    background-color: #e8e8e8;
+}
