--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,5 +1,5 @@
 .headerContainer{
-    /* width:1440px; */
+    width:1440px;
     width:100%;
     display:flex;
     align-items:flex-start;
@@ -10,7 +10,6 @@
     background-color: rgba(255,255,255,0.9);
     padding:2rem 2rem 1rem;
     top:0;
-    height:87px;
     overflow: hidden;
 }
 .headerManuList{
