--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,59 +1,19 @@
 .headerContainer{
     width:1440px;
-    width:100%;
+    /* height:200px; */
     display:flex;
     align-items:flex-start;
     justify-content:center;
     border-bottom:.5px solid #c0c0c0;
-    position:absolute;
+    position:fixed;
     z-index: 9999;
     background-color: rgba(255,255,255,0.9);
-    padding:2rem 2rem 1rem;
+    padding:2rem 2rem .8rem;
     top:0;
-    overflow: hidden;
-}
-.headerManuList{
-    font-size:20px;
-    font-weight: 600;
-    font-family:'Noto sans KR';
-    display: flex;
-}
-.headerManuList>li>a{
-    padding:30px;
-}
-.headerManuList>li>a:hover{
-    cursor: pointer;
-    border-bottom:1px solid #d21c1c ;
 }
 .headerBtn{
     font-size:1.2rem;
     padding:0 5rem 0 1.5rem;
     display: flex;
     align-items: center;
-}
-.subManu>ul{
-    position:absolute;
-    font-size:1rem;
-    font-weight:500;
-    display: flex;
-    margin-top:2rem;
-}
-.subManu>ul>li{
-    padding:2.5rem;
-}
-.subManu>a{
-    padding:0 1rem;
-}
-.active{
-    border-bottom:1px solid #d21c1c ;
-}
-/* subLink */
-
-.subLink:hover{
-    font-weight:bold;
-    color:#d21c1c;
-}
-
-.active{
-    border-bottom: 1px solid #d21c1c;
 }
