--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,6 +1,5 @@
 .headerContainer{
-    width:1440px;
-    /* height:200px; */
+    width:100%;
     display:flex;
     align-items:flex-start;
     justify-content:center;
@@ -8,12 +7,23 @@
     position:fixed;
     z-index: 9999;
     background-color: rgba(255,255,255,0.9);
-    padding:2rem 2rem .8rem;
     top:0;
+}
+.headerContainer>h1{
+    padding-top:1.5rem;
+    padding-left:2rem;
 }
 .headerBtn{
     font-size:1.2rem;
-    padding:0 5rem 0 1.5rem;
+    padding:1.8rem 5rem 0 1.5rem;
     display: flex;
     align-items: center;
+}
+
+/* 반응형웹사이트 */
+
+@media screen and (max-width: 1280px) {
+    .headerBtn{
+        display: none;
+    }
 }
