--- a/components/Layout/sub-manu.module.css
+++ b/components/Layout/sub-manu.module.css
@@ -1,22 +1,30 @@
 .subManuContainer{
-    width:100%;
-    /* height:100px; */
+    position:fixed;
     background-color: #fff;
-    position:absolute;
-    top:89px;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.07);
+    top:102px;
     left:0;
-    z-index: 9999;
-    /* display:none; */
-    border-top:.5px solid #c0c0c0;
+    right:0;
+    z-index: -1;
+    width:100%;
 }
-.subManuContainer>ul{
-    display:flex;
-    font-weight:normal;
+.inner{
+    letter-spacing: 0;
+    height:100%;
 }
-.subManuContainer>ul>li{
-    padding:2.5rem 1.5rem;
-    margin:0 .5rem;
+.inner>ul{
+    margin-left:250px;
 }
-.subManuContainer>ul>li>a:hover{
-    color:#d21c1c;
+.inner>ul:nth-child(3){
+    margin-left:465px;
+}
+.inner>ul:nth-child(4){
+    margin-left:500px;
+}
+.inner>ul:nth-child(5){
+    margin-left:770px;
+}
+.inner>ul>li{
+    padding:2rem 1rem;
+    display: inline-block;
 }
