--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,29 +1,20 @@
 .headerContainer{
-    width:100%;
     display:flex;
-    align-items:flex-start;
-    justify-content:center;
-    border-bottom:.5px solid #c0c0c0;
+    justify-content: space-around;
     position:fixed;
-    z-index: 9999;
-    background-color: rgba(255,255,255,0.9);
+    width:100%;
+    height:auto;
     top:0;
+    z-index: 9999;
+    border-bottom: 1px solid #cecece;
+    background-color: #fff;
 }
 .headerContainer>h1{
-    padding-top:1.5rem;
-    padding-left:2rem;
+    float: left;
+    margin-top:30px;
 }
-.headerBtn{
-    font-size:1.2rem;
-    padding:1.8rem 5rem 0 1.5rem;
+.sideManu{
     display: flex;
+    justify-content: center;
     align-items: center;
-}
-
-/* 반응형웹사이트 */
-
-@media screen and (max-width: 1280px) {
-    .headerBtn{
-        display: none;
-    }
 }
