--- a/components/Layout/icon-haeder.module.css
+++ b/components/Layout/icon-haeder.module.css
@@ -1,6 +1,3 @@
-.headerUserManuList{
-    padding-top:1.7rem;
-}
 .headerUserManuList>ul>li:nth-child(2){
     position: relative;
 }
@@ -54,4 +51,16 @@
     top:-5px;
     right:5px;
     z-index: 10;
+}
+
+/* 반응형웹사이트 */
+@media screen and (max-width:1085px){
+    .headerUserManuList>ul{
+        display:none;
+    }
+}
+@media screen and (max-width:850px){
+    .headerUserManuList>ul{
+        display:flex;
+    }
 }
