--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -3,11 +3,12 @@
     justify-content: space-around;
     position:fixed;
     width:100%;
-    height:auto;
+    height:101px;
     top:0;
     z-index: 9999;
     border-bottom: 1px solid #cecece;
     background-color: #fff;
+    min-width: 680px;
 }
 .headerContainer>h1{
     float: left;
@@ -17,4 +18,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height:101px;
+}
+
+@media screen and (max-width: 850px){
+    .headerContainer{
+        display:block;
+    }
 }
