--- a/components/header/nav.module.css
+++ b/components/header/nav.module.css
@@ -1,3 +1,4 @@
+.navContainer{}
 .navContainer>ul{
     display:flex;
     height:101px;
@@ -23,4 +24,9 @@
     position: absolute;
     left: 0;
     bottom: 0;
+}
+@media screen and (max-width:850px) {
+    .navContainer{
+        display: none;
+    }
 }
