반응형 디자인으로 변경중

--- a/components/UI/section01/slide/main-slide.module.css
+++ b/components/UI/section01/slide/main-slide.module.css
@@ -10,9 +10,8 @@
     position: absolute;
 }
 .slidesContainer>ul>li{
-    width:1900px;
+    width:100%;
     height:calc(800px - 7.5rem);
-    background-size: cover;
 }
 .arrowBtn{
     width:100%;
