--- a/components/UI/section01/banner/banner.module.css
+++ b/components/UI/section01/banner/banner.module.css
@@ -4,14 +4,15 @@
     bottom:0;
 }
 .bannerContainer{
-    /* width:0%; */
+    width:calc(100% - 5rem);
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin:0 2.5rem ;
+    margin:0 auto ;
 }
 .bannerItem{
-    width:27.5rem;
+    /* width:27.5rem; */
+    width:30%;
     padding:3rem 0;
     text-align: center;
     /* line-height:5rem; */
